<resources>
    <string name="app_name">Helmholtzschule</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="playStore"><u>Play Store</u></string>
    <string name="datenschutz"><u>Aktuelle Datenschutzerklärung</u></string>
    <string name="datenschutzDatenbankHeader">Datenschutz des\nLogindienstes:</string>
    <string name="datenschutzDatenbank"><u>HelmholtzDatabase</u></string>
    <string name="impressum"><u>Aktuelles Impressum</u></string>
    <string name="emailHelp">helmholtzapp.support@lazybird.me</string>
    <string name="exportText">Der Stundenplan wird als Datei gesichert</string>
    <string name="kontoText">Öffnet das Dashboard im Browser</string>
    <string name="importText">Stundenplan aus Sicherungsverzeichnis importieren</string>
    <string name="clearText">Der Stundenplan wird unwiderruflich gelöscht</string>
    <string name="actionsEmpty">Keine Termine\nvorhanden</string>
    <string name="crash_toast_text">Etwas ist schiefgelaufen:(\nBitte sende eine Mail an uns:)</string>
    <string name="welcomeString">Danke dass du die Helmholtz-App installiert hast.\n\nGefällt dir die App? Stört dich etwas? Dann hinterlasse bitte eine Bewertung im PlayStore.\n\nStürzt die App ab oder verhält sich merkwürdig?\nDann sende eine Mail an uns, in der du erklärst, wie es dazu kam. Die Adresse findest du unter "Über die App"\n\nVielen Dank!</string>
    <string name="welcomeButtonTxt">Alles klar</string>
    <string name="descrReloadButton">ReloadButton</string>
    <string name="overflowMsg">Durch diesen Vorgang\nwerden Stunden gelöscht. Fortfahren?</string>
    <string name="loginText">Bitte melde dich mit deinem\nHelmholtzDatabase Account an.\nDu hast noch keinen Account? Dann erstelle ihn </string>
    <string name="textCrash"><b>Oh, etwas ist schiefgelaufen:(</b>\n\nDrücke den Pfeil, um\neine E-Mail an uns zu senden,\ndie den Fehlerbericht enthält.\nSo können wir diesen Fehler\nschnellstmöglich beheben.\nVielen Dank!</string>
    <string name="textLogout">Abmelden</string>
    <string name="linkRegister"><u>hier</u></string>
    <string name="login_datenschutz"><u>Datenschutz des Logindienstes</u></string>
    

    <string name="hhs_app_store">https://tools.lazybird.me/redirect.php?target=hhs-app-store</string>
    <string name="hhs_app_vertretungsplan">https://tools.lazybird.me/redirect.php?target=hhs-app-vertretungsplan&amp;noredirect&amp;username=</string>
    <string name="hhs_app_benachrichtigungen">https://tools.lazybird.me/redirect.php?target=hhs-app-benachrichtigungen&amp;noredirect&amp;username=</string>
    <string name="hhs_app_mensaplan">https://tools.lazybird.me/redirect.php?target=hhs-app-mensaplan&amp;noredirect</string>
    <string name="hhs_app_lehrerliste">https://tools.lazybird.me/redirect.php?target=hhs-app-lehrerliste&amp;noredirect</string>
    <string name="hhs_app_register">https://tools.lazybird.me/redirect.php?target=hhs-app-register</string>
    <string name="hhs_app_impressum_database">https://tools.lazybird.me/redirect.php?target=hhs-app-impressum-database</string>
    <string name="hhs_app_impressum_app">https://tools.lazybird.me/redirect.php?target=hhs-app-impressum-app</string>
    <string name="hhs_app_datenschutz_app">https://tools.lazybird.me/redirect.php?target=hhs-app-datenschutz-app</string>
    <string name="hhs_app_dashboard">https://tools.lazybird.me/redirect.php?target=hhs-app-dashboard</string>
    <string name="hhs_app_news">https://tools.lazybird.me/redirect.php?target=hhs-app-news</string>
    <string name="hhs_app_alert_message">https://tools.lazybird.me/redirect.php?target=hhs-app-alert-message&amp;noredirect</string>

    <string name="emptyVertretungsplan">{\"meta\":{\"code\":200,\"heute\":\"35.05 Bugtag, Woche X\",\"morgen\":\"36.05 Bugtag, Woche X\"},\"data\":{\"heute\":[],\"morgen\":[]}}</string>
    <string name="emptyBenachrichtigungen">{\"meta\":{\"code\":200,\"heute\":\"35.05 Bugtag, Woche X\",\"morgen\":\"36.05 Bugtag, Woche X\"},\"data\":{\"heute\":[\"Es konnten keine Daten empfangen werden.\"],\"morgen\":[\"Es konnten keine Daten empfangen werden.\"]}}</string>
</resources>
