<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:baselineAligned="false"
    tools:context="de.helmholtzschule_frankfurt.helmholtzapp.activity.MainActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Über die App"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/version_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_app"
            android:layout_marginTop="16dp"
            android:text="Version:"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/impressum_ueberschrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version_view2"
            android:layout_marginTop="16dp"
            android:text="Impressum: "
            android:textColor="#000000" />

        <TextView
            android:id="@+id/impressum_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/version_view2"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/impressum_ueberschrift"
            android:layout_toRightOf="@+id/impressum_ueberschrift"
            android:text="@string/impressum"
            android:textColor="@color/colorHyperlink" />

        <View
            android:id="@+id/rule1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/impressum_link"
            android:layout_marginTop="25dp"
            android:background="@color/colorBorderGrey" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rule1"
            android:layout_marginTop="20dp"
            android:text="Feedback &amp; Hilfe"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/feedbackmail_ueberschrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback"
            android:layout_marginTop="16dp"
            android:text="E-Mail: "
            android:textColor="#000000" />

        <TextView
            android:id="@+id/feedbackmail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedback"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/feedbackmail_ueberschrift"
            android:layout_toRightOf="@+id/feedbackmail_ueberschrift"
            android:text=""
            android:textColor="@color/colorHyperlink" />

        <TextView
            android:id="@+id/store_ueberschrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbackmail_address"
            android:layout_marginTop="16dp"
            android:text="App bewerten: "
            android:textColor="#000000" />

        <TextView
            android:id="@+id/store_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedbackmail_address"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/store_ueberschrift"
            android:layout_toRightOf="@+id/store_ueberschrift"
            android:text="@string/playStore"
            android:textColor="@color/colorHyperlink" />

        <View
            android:id="@+id/rule2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/store_link"
            android:layout_marginTop="25dp"
            android:background="@color/colorBorderGrey" />

        <TextView
            android:id="@+id/sonstiges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rule2"
            android:layout_marginTop="20dp"
            android:text="Sonstiges"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/datenschutz_ueberschrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sonstiges"
            android:layout_marginTop="16dp"
            android:text="Datenschutz: "
            android:textAllCaps="false"
            android:textColor="#000000"
            tools:layout_editor_absoluteY="152dp" />

        <TextView
            android:id="@+id/datenschutz_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sonstiges"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/datenschutz_ueberschrift"
            android:layout_toRightOf="@+id/datenschutz_ueberschrift"
            android:text="@string/datenschutz"
            android:textColor="@color/colorHyperlink" />

        <TextView
            android:id="@+id/datenschutz_login_ueberschrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/datenschutz_link"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="-10dp"
            android:layout_marginRight="-10dp"
            android:text="@string/datenschutzDatenbankHeader"
            android:textAllCaps="false"
            android:textColor="#000000"
            tools:layout_editor_absoluteY="152dp" />

        <TextView
            android:id="@+id/datenschutz_login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datenschutz_link"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/datenschutz_login_ueberschrift"
            android:layout_toRightOf="@+id/datenschutz_login_ueberschrift"
            android:text="@string/datenschutzDatenbank"
            android:textColor="@color/colorHyperlink" />

    </RelativeLayout>

</ScrollView>