<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.helmholtzschule_frankfurt.helmholtzapp.tab.Tab10settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settings_allgemein_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Allgemein"
            android:textColor="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/settings_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_allgemein_header"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/settings_text_logged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="Eingeloggt als:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_edit_logged"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_text_logged"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/textLogout" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_logged"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/settings_text_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="Konto bearbeiten"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_edit_dashboard"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_text_dashboard"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/kontoText" />

        </RelativeLayout>


        <TextView
            android:id="@+id/settings_text_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_dashboard"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Standard Tab"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/settings_edit_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_text_tab"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <View
            android:id="@+id/settings_rule1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/settings_edit_tab"
            android:layout_marginTop="15dp"
            android:background="@color/colorBorderGrey" />

        <TextView
            android:id="@+id/settings_stundenplan_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_rule1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Stundenplan"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/settings_text_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_stundenplan_header"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="Stundenanzahl"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/settings_edit_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_text_hours"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <RelativeLayout
            android:id="@+id/settings_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_edit_hours"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/settings_text_export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="Stundenplan sichern"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_edit_export"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_text_export"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/exportText" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_export"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/settings_text_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="Stundenplan importieren"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_edit_import"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_text_import"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/importText" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_import"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/settings_text_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="Stundenplan leeren"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_edit_clear"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_text_clear"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/clearText" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
