<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.helmholtzschule_frankfurt.helmholtzapp.Tab8settings">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Allgemein"
                            android:id="@+id/settings_allgemein_header"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/settings_dashboard"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/settings_allgemein_header">

                                <TextView
                                    android:id="@+id/settings_text_dashboard"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginStart="10dp"
                                    android:text="Konto bearbeiten"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="160dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/settings_edit_dashboard"
                                    android:text="@string/kontoText"
                                    android:layout_below="@id/settings_text_dashboard"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginStart="10dp"/>

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/settings_text_push"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/settings_dashboard"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="Push Nachrichten aktiv"
                            android:textSize="20sp"
                            android:layout_marginRight="110dp"
                            android:layout_marginEnd="110dp"
                            android:textStyle="bold" />

                        <CheckBox
                            android:layout_width="45dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/settings_edit_push_notes"
                            android:layout_toRightOf="@id/settings_text_push"
                            android:layout_toEndOf="@id/settings_text_push"
                            android:layout_below="@id/settings_dashboard"
                            android:layout_marginTop="5dp"
                            android:checked="true"
                            android:theme="@style/primaryDarkForeground"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorBorderGrey"
                            android:layout_below="@id/settings_text_push"
                            android:id="@+id/settings_rule1"
                            android:layout_marginTop="15dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Stundenplan"
                            android:id="@+id/settings_stundenplan_header"
                            android:layout_below="@id/settings_rule1"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp" />

                        <TextView
                            android:id="@+id/settings_text_hours"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/settings_stundenplan_header"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:text="Stundenanzahl"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/settings_edit_hours"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/settings_text_hours"
                            android:background="@android:drawable/btn_dropdown"
                            android:spinnerMode="dropdown"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/settings_export"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/settings_edit_hours">

                                <TextView
                                    android:id="@+id/settings_text_export"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginStart="10dp"
                                    android:text="Stundenplan sichern"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="160dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/settings_edit_export"
                                    android:text="@string/exportText"
                                    android:layout_below="@id/settings_text_export"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginStart="10dp"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/settings_import"
                            android:layout_marginTop="20dp"
                            android:layout_below="@+id/settings_export">

                                <TextView
                                    android:id="@+id/settings_text_import"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginStart="10dp"
                                    android:text="Stundenplan importieren"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/settings_edit_import"
                                    android:text="@string/importText"
                                    android:layout_below="@id/settings_text_import"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginStart="10dp"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/settings_clear"
                            android:layout_marginTop="20dp"
                            android:layout_below="@+id/settings_import"
                            android:layout_marginBottom="10dp">

                                <TextView
                                    android:id="@+id/settings_text_clear"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginStart="10dp"
                                    android:text="Stundenplan leeren"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/settings_edit_clear"
                                    android:text="@string/clearText"
                                    android:layout_below="@id/settings_text_clear"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginStart="10dp"/>

                        </RelativeLayout>

                </RelativeLayout>

        </ScrollView>

</RelativeLayout>